# torchmfbd

./: .gitignore  README.md  TODO  banco_mcao.py  pyproject.toml  sync_fromfreija.sh  sync_tofreija.sh
docs/userguide/: config.rst  deconvolution.rst  deconvolutionSV.rst  destretch.rst  diversity.rst  installation.rst  patches.rst
examples/: banco_mcao.py  banco_mcao_patches.py  destretch.py  nmf_basis.py
examples/hifi_6563/: hifi_halpha_kl_patches.py  hifi_halpha_nmf.py
examples/imax/: config_imax.yaml  imax.yaml  imax_defocus.fits  imax_focus.fits  phasediv.py
examples/inprocess/: spot_8542_polar_nmf.py
examples/offlimb_8542/: config_8542_kl.yaml  offlimb_8542_kl_patches.py  offlimb_8542_nmf.py
examples/qs_8542/: qs_8542_kl_patches.py  qs_8542_kl_patches.yaml  qs_8542_nmf.py  tmp.py
examples/spot_3934/: spot_3934_kl.py  spot_3934_nmf.py
examples/spot_8542/: kl.yaml  kl_meta.yaml  metapupil.py  nmf.yaml  spot_8542_kl_patches.py  spot_8542_kl_patches.yaml  spot_8542_nmf.py  spot_8542_nmf.yaml  spot_8542_nmf_patches.py
examples/spot_sv_8542/: nmf_sv.yaml  spot_8542_nmf_sv.py
reproducibility/: download_script.py
reproducibility/aux/: camXIX_2019-08-01T08:15:47_00010_8542_8542_+65_lc0.fits  camXIX_2020-07-27T08:35:09_00000_8542_8542_+65_lc0.fits  camXX_2019-08-01T08:15:47_00010_8542_8542_+65_lc0.fits  camXX_2020-07-27T08:35:09_00000_8542_8542_+65_lc0.fits
reproducibility/imax/: phasediv.py
reproducibility/qs_8542/: qs_8542_kl_patches.py
reproducibility/spot_3934/: metapupil.py  spot_3934_meta.yaml
src/torchmfbd/: __init__.py  configuration.py  (+12 more)
(+11 files in other folders)
