[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torchmfbd"
version = "0.1"
authors = [
  { name="A. Asensio Ramos", email="andres.asensio@iac.es" },
]
description = "Multi-frame blind deconvolution with PyTorch"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 4 - Beta',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    "Operating System :: Unix",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Programming Language :: Python',
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: Implementation :: CPython",
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
]
